--- a/style.css
+++ b/style.css
@@ -694,35 +694,24 @@ body {
   color: rgba(255, 255, 255, 0.35)
 }
 
-/* .input-wrap .label {
-  position: absolute;
-  left: 14px;
-  top: -10px;
-  background: transparent;
-  color: var(--muted);
-  font-size: 12px;
-  padding: 0 6px
-} */
-
 .input-wrap .label {
   position: absolute;
   left: 14px;
   top: -10px;
-  background: rgb(75 52 49); 
+  background: rgb(50 50 66); 
   color: #ffffff;
   font-size: 12px;
   padding: 0 6px; 
   border-radius: 6px;
   backdrop-filter: blur(6px) saturate(160%);
   -webkit-backdrop-filter: blur(6px) saturate(160%);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+  border: 1px solid rgb(50 50 66);
 }
 
 .light-theme .input-wrap .label {
-  background: rgb(189 164 162);
+  background: rgb(250 250 250);
   color: var(--muted);
-  border: 1px solid rgba(0, 0, 0, 0.05);
+  border: 1px solid rgb(250 250 250);
   backdrop-filter: blur(10px) saturate(180%);
   -webkit-backdrop-filter: blur(10px) saturate(180%);
 }
