Added Love quote of the day feature

--- a/style.css
+++ b/style.css
@@ -2343,3 +2343,50 @@ body.dark-mode .feedback-list-section {
 	background: linear-gradient(135deg, #ff5c9a, #ff7cab);
 	transform: scale(1.05);
 }
+
+
+/* love quote */
+.love-quote-container{
+	display:flex;
+	
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.love-quote{
+	width:80vw;
+	backdrop-filter: blur(30px);
+	border: 2px solid hsla(39, 17%, 56%, 0.15);
+	
+	border-radius: 10px;
+	text-align: center;
+
+	padding:10px 15px;
+	box-shadow: 2px 2px 2px hsl(0, 46%, 34%);
+	transition: 0.25s ease-in-out;
+	
+
+}
+.love-quote:hover{
+	box-shadow: none;
+	transform: translateY(3px);
+	
+
+}
+
+#loveQuoteHeading{
+	align-items: center;
+}
+
+.author{
+	text-align: right;
+	width: 80vw;
+	color:hsl(0, 26%, 49%);
+	
+}
+
+.authorLink{
+	
+	color: #991b1b;
+
+}
